# aapt-2

./: CMakeLists.txt  README.md  build.sh
cmake/: CMakeLists.txt  aapt.cmake  aapt2.cmake  aidl.cmake  libexpat.cmake  libz.cmake  libziparchive.cmake  zipalign.cmake
patches/: aapt-Main.cpp.patch  aapt2-io-Util.h.patch  aapt2-util-Util.cpp.patch  androidfw-Asset.cpp.patch  androidfw-AssetManager.cpp.patch  androidfw-ResourceTypes.cpp.patch  androidfw-StringPiece.h.patch  incfs-util-map_ptr.cpp.patch  incfs-util-map_ptr.h.patch  libcutils-properties.cpp.patch  libcutils-sockets_unix.cpp.patch  liblog-log.h.patch  liblog-logger_write.cpp.patch  libutils-Threads.cpp.patch  libutils-misc.cpp.patch
prebuilt/arm64-v8a/: aapt  aapt2  aidl  zipalign
prebuilt/armeabi-v7a/: aapt  aapt2  aidl  zipalign
prebuilt/x86/: aapt  aidl  zipalign
prebuilt/x86_64/: aapt  aidl  zipalign
src/aapt/: Main.cpp
src/aapt2/util/: Util.cpp
src/aidl/: aidl_language_l.cpp  aidl_language_l.h  aidl_language_y.cpp  aidl_language_y.h  location.hh
src/googletest/googlemock/: Android.bp
src/protobuf/src/google/protobuf/stubs/: common.cc
tools/: protoc  termux-elf-cleaner
